ambassador/tests/000-default/gold.intermediate.json
{
    "envoy_config": {
        "admin": [
            {
                "_source": "--internal--",
                "admin_port": 8001
            }
        ],
        "clusters": [
            {
                "_referenced_by": [
                    "--internal--",
                    "mapping-diag.yaml.1"
                ],
                "_service": "127.0.0.1:8877",
                "_source": "mapping-diag.yaml.1",
                "enable_ipv4": true,
                "enable_ipv6": false,
                "lb_type": "round_robin",
                "name": "cluster_127_0_0_1_8877",
                "type": "strict_dns",
                "urls": [
                    "tcp://127.0.0.1:8877"
                ]
            },
            {
                "_referenced_by": [
                    "auth.yaml.1"
                ],
                "_service": "demo.getambassador.io",
                "_source": "auth.yaml.1",
                "enable_ipv4": true,
                "enable_ipv6": false,
                "lb_type": "round_robin",
                "name": "cluster_extauth_demo_getambassador_io",
                "type": "strict_dns",
                "urls": [
                    "tcp://demo.getambassador.io:80"
                ]
            },
            {
                "_referenced_by": [
                    "mapping-cqrs.yaml.1",
                    "mapping-cqrs.yaml.2",
                    "mapping-qotm.yaml.1"
                ],
                "_service": "demo.getambassador.io",
                "_source": "mapping-cqrs.yaml.1",
                "enable_ipv4": true,
                "enable_ipv6": false,
                "lb_type": "round_robin",
                "name": "cluster_demo_getambassador_io",
                "type": "strict_dns",
                "urls": [
                    "tcp://demo.getambassador.io:80"
                ]
            },
            {
                "_referenced_by": [
                    "mapping-httpbin.yaml.1"
                ],
                "_service": "httpbin.org:80",
                "_source": "mapping-httpbin.yaml.1",
                "host_rewrite": "httpbin.org",
                "enable_ipv4": true,
                "enable_ipv6": false,
                "lb_type": "round_robin",
                "name": "cluster_httpbin_org_80",
                "type": "strict_dns",
                "urls": [
                    "tcp://httpbin.org:80"
                ]
            }
        ],
        "filters": [
            {
                "_source": "--internal--",
                "config": {},
                "name": "cors"
            },
            {
                "_referenced_by": [
                    "auth.yaml.1"
                ],
                "_services": [
                    "demo.getambassador.io"
                ],
                "_source": "auth.yaml.1",
                "config": {
                    "allowed_headers": [
                        "x-extauth-required",
                        "x-authenticated-as",
                        "x-qotm-session"
                    ],
                    "cluster": "cluster_extauth_demo_getambassador_io",
                    "path_prefix": "/auth/v0",
                    "timeout_ms": 5000
                },
                "name": "extauth",
                "type": "decoder"
            },
            {
                "_source": "--internal--",
                "config": {},
                "name": "router",
                "type": "decoder"
            }
        ],
        "listeners": [
            {
                "_source": "--internal--",
                "require_tls": false,
                "service_port": 80,
                "use_proxy_proto": false,
                "use_remote_address": true,
                "redirect_listener": false
            }
        ],
        "routes": [
            {
                "__saved": [
                    0,
                    9,
                    0,
                    "/httpbin/",
                    "GET"
                ],
                "_group_id": "0a0b4a3c06d5d92984505f097c69498d038c5737",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-httpbin.yaml.1"
                ],
                "_source": "mapping-httpbin.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_httpbin_org_80",
                        "weight": 100.0
                    }
                ],
                "host_rewrite": "httpbin.org",
                "prefix": "/httpbin/",
                "prefix_rewrite": "/"
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_ready",
                    "GET"
                ],
                "_group_id": "0a42187b7b3d283e0079ddab01825e1c71fad9f6",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_ready",
                "prefix_rewrite": "/ambassador/v0/check_ready",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    6,
                    10,
                    "/cqrs/",
                    "GET",
                    ":method-GET"
                ],
                "_group_id": "3e935e6af2ad12df1441fee5d2cf17a69303b2ad",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-cqrs.yaml.1"
                ],
                "_source": "mapping-cqrs.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_demo_getambassador_io",
                        "weight": 100.0
                    }
                ],
                "headers": [
                    {
                        "name": ":method",
                        "regex": false,
                        "value": "GET"
                    }
                ],
                "prefix": "/cqrs/",
                "prefix_rewrite": "/qotm/quote/"
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_alive",
                    "GET"
                ],
                "_group_id": "6151893fbc2f1f730a1bb946b2eefac391f0d2ec",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_alive",
                "prefix_rewrite": "/ambassador/v0/check_alive",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    12,
                    0,
                    "/ambassador/",
                    "GET"
                ],
                "_group_id": "688e9f91e06f33c943c0c6373a5bdd32e647f7c4",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-diag.yaml.1"
                ],
                "_source": "mapping-diag.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/",
                "prefix_rewrite": "/ambassador/"
            },
            {
                "__saved": [
                    0,
                    6,
                    0,
                    "/qotm/",
                    "GET"
                ],
                "_group_id": "9fda39523fe03a3c6aac9c21098375764ec0822d",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-qotm.yaml.1"
                ],
                "_source": "mapping-qotm.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_demo_getambassador_io",
                        "weight": 100.0
                    }
                ],
                "prefix": "/qotm/",
                "prefix_rewrite": "/qotm/"
            },
            {
                "__saved": [
                    0,
                    15,
                    0,
                    "/ambassador/v0/",
                    "GET"
                ],
                "_group_id": "b69eeb747b38f5e5fd3955d044ea7797d67d024f",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/",
                "prefix_rewrite": "/ambassador/v0/",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    6,
                    10,
                    "/cqrs/",
                    "PUT",
                    ":method-PUT"
                ],
                "_group_id": "c78d3e3dc6c4a44ace22414fd99b17305dd29a37",
                "_method": "PUT",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-cqrs.yaml.2"
                ],
                "_source": "mapping-cqrs.yaml.2",
                "clusters": [
                    {
                        "name": "cluster_demo_getambassador_io",
                        "weight": 100.0
                    }
                ],
                "headers": [
                    {
                        "name": ":method",
                        "regex": false,
                        "value": "PUT"
                    }
                ],
                "prefix": "/cqrs/",
                "prefix_rewrite": "/qotm/quote/"
            }
        ]
    },
    "errors": {},
    "source_map": {
        "--internal--": {
            "--internal--": true
        },
        "auth.yaml": {
            "auth.yaml.1": true
        },
        "mapping-cqrs.yaml": {
            "mapping-cqrs.yaml.1": true,
            "mapping-cqrs.yaml.2": true
        },
        "mapping-diag.yaml": {
            "mapping-diag.yaml.1": true
        },
        "mapping-httpbin.yaml": {
            "mapping-httpbin.yaml.1": true
        },
        "mapping-qotm.yaml": {
            "mapping-qotm.yaml.1": true
        }
    },
    "sources": {
        "--diagnostics--": {
            "_source": "--diagnostics--",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "filename": "--diagnostics--",
            "index": 0,
            "kind": "diagnostics",
            "name": "Ambassador Diagnostics",
            "version": "v0"
        },
        "--internal--": {
            "_source": "--internal--",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "filename": "--internal--",
            "index": 0,
            "kind": "Internal",
            "name": "Ambassador Internals",
            "version": "v0"
        },
        "auth.yaml.1": {
            "_source": "auth.yaml",
            "filename": "auth.yaml",
            "index": 1,
            "kind": "Module",
            "name": "authentication",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nconfig:\n  allowed_headers:\n  - x-extauth-required\n  - x-authenticated-as\n  - x-qotm-session\n  auth_service: demo.getambassador.io\n  path_prefix: /auth/v0\nkind: Module\nname: authentication\n"
        },
        "mapping-cqrs.yaml.1": {
            "_source": "mapping-cqrs.yaml",
            "filename": "mapping-cqrs.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "cqrs_get_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nmethod: GET\nname: cqrs_get_mapping\nprefix: /cqrs/\nrewrite: /qotm/quote/\nservice: demo.getambassador.io\n"
        },
        "mapping-cqrs.yaml.2": {
            "_source": "mapping-cqrs.yaml",
            "filename": "mapping-cqrs.yaml",
            "index": 2,
            "kind": "Mapping",
            "name": "cqrs_put_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nmethod: PUT\nname: cqrs_put_mapping\nprefix: /cqrs/\nrewrite: /qotm/quote/\nservice: demo.getambassador.io\n"
        },
        "mapping-diag.yaml.1": {
            "_source": "mapping-diag.yaml",
            "filename": "mapping-diag.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "diag_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: diag_mapping\nprefix: /ambassador/\nrewrite: /ambassador/\nservice: 127.0.0.1:8877\n"
        },
        "mapping-httpbin.yaml.1": {
            "_source": "mapping-httpbin.yaml",
            "filename": "mapping-httpbin.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "httpbin_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nhost_rewrite: httpbin.org\nkind: Mapping\nname: httpbin_mapping\nprefix: /httpbin/\nservice: httpbin.org:80\n"
        },
        "mapping-qotm.yaml.1": {
            "_source": "mapping-qotm.yaml",
            "filename": "mapping-qotm.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "qotm_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: qotm_mapping\nprefix: /qotm/\nrewrite: /qotm/\nservice: demo.getambassador.io\n"
        }
    }
}
